2007-06-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl/MonoDevelop.VersionControl/VersionControlNodeExtension.cs:
	  Move the overlay icon one pixel up, to reduce spacing.

2007-05-31  Rafael 'fumasa' Giorgetti  <fumasa@gmail.com>

        * MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/LibSvnClient.cs:
        Add struct svn_client_commit_info_t.

        * MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs:
        Show revision number when Commit.

2007-05-31  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/LibSvnClient.cs:
	Call a function in the .ctor to cause an exception if the library doesn't exist.

2007-05-31  Jeffrey Stedfast  <fejj@novell.com>

	Fix for bug #81766.

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SubversionRepository.cs:
	Updated to reflect changes to SvnClient nested classes/structs (which have been moved to LibSvnClient).
	
	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.Gui/ClientCertificateDialog.cs: Same.

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.Gui/ClientCertificatePasswordDialog.cs: Same.

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.Gui/SslServerTrustDialog.cs: Same.

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.Gui/UserPasswordDialog.cs: Same.

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SubversionVersionControl.cs:
	Same.

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/LibApr.cs:
	Moved some constants here.

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs:
	Use a LibSvnClient object.

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/LibSvnClient.cs: